Edit marker modal will handle both add and edit.  Allowing soft delete of points.  Allowing simple moving of markers. More precise css for info window image to prevent stretching.

--- a/public/css/map.css
+++ b/public/css/map.css
@@ -7,7 +7,7 @@ body div.container {
     padding: 10px;
 }
 
-.card-image-map {
+img.card-image-map {
     max-height: 200px;
     max-width: fit-content;
     align-self: center;
